CHANGES.txt - 2008-10-31
------------------------

CHANGES IN CUPS V1.4b2

	- The IPP, LPD, and socket backends used different "connecting"
	  progress messages.


CHANGES IN CUPS V1.4b1

	- Documentation updates (STR #2567)
	- The PPD compiler now allows local message catalogs to
	  override the standard CUPS translations (STR #2642)
	- The ppdmerge command did not merge custom option strings
	  (STR #2863)
	- The scheduler now supports the Hold-New-Jobs and
	  Release-Held-New-Jobs operations; these are exposed via the
	  cupsdisable and cupsenable commands (STR #2332)
	- The lpstat command is now much faster when displaying the
	  status of a single printer (STR #2843)
	- The scheduler now caches information from PPD files to provide
	  significantly faster startup time with large numbers of PPDs
	  (STR #1293)
	- CUPS-Get-Driver now provides much better driver matching based
	  on the IEEE-1284 device ID and make/model strings (STR #2707)
	- Now support the cupsSNMPSupplies keyword to control whether
	  the network backends query the SNMP Printer MIB for supply
	  levels.
	- Now support and use a new banner file format for better text
	  support and easier customization (STR #2490)
	- The scheduler now sets the PRINTER_INFO and PRINTER_LOCATION
	  environment variables from the corresponding IPP attributes.
	- The ippRead*() and ippWrite*() functions no longer use a
	  stack-based buffer (STR #2388)
	- The CUPS-Add-Modify-Printer operation now allows you to set
	  the printer-state-reasons attribute.
	- The "set printer options" page now supports auto-configuration
	  of printer options (STR #1440)
	- The web interface now provides an advanced server settings
	  form.
	- The web interface's "modify printer" pages now make it
	  easier to change just one setting (STR #1919)
	- The scheduler now supports a plist PrintcapFormat.
	- The scheduler now supports multiple addresses in Allow and
	  Deny lines, just like Apache (STR #2947)