@@ -3,6 +3,8 @@ CHANGES.txt - 2008-10-31
 
 CHANGES IN CUPS V1.4b2
 
+	- The scheduler now waits to allow system sleep until the jobs
+	  have all stopped.
 	- The IPP, LPD, and socket backends used different "connecting"
 	  progress messages.
 
